<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe1e0de"
    android:padding="3dp" >

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/good_shape_bg"
        android:layout_marginTop="2dp"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/good_subj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/good_test_str"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/good_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/good_tip_str"
                android:textColor="@color/gray"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/good_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="6dp"
            android:paddingTop="6dp"
            android:text="@string/good_sum_str"
            android:textColor="@color/light_gray"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>