<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe1e0de"
    android:isScrollContainer="true"
    android:padding="3dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/navpage"
        android:scrollbarThumbVertical="@drawable/scrollbar_handle_vertical" >

        <LinearLayout
            android:id="@+id/item_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listview_item_background"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp" >

            <TextView
                android:id="@+id/Item_MainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/text_test_str"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/Item_MainImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:src="@drawable/nofound"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/Item_ctn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_vote_enable"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/item_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_num"
                        android:textColor="#815F3D"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="18dp"
                    android:background="@drawable/btn_text_item_selector"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/Item_share_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/share_btn"
                        android:textColor="#815F3D"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toLeftOf="@+id/item_share"
                    android:background="@drawable/btn_text_item_selector"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/dialog_fav_btn"
                        android:textColor="#815F3D"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toLeftOf="@+id/item_fav"
                    android:background="@drawable/btn_text_item_selector"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/more_btn"
                        android:textColor="#815F3D"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ad_bar_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone" />

</RelativeLayout>